horizontal scrolling has been fixed as per #30, although a better scrolling to objects on click hasn't been implemented yet

--- a/webapp/styles/global.scss
+++ b/webapp/styles/global.scss
@@ -5,75 +5,46 @@ body {
     scroll-behavior: smooth;
 }
 
-section {
-    display: flex;
-    position: relative;
+.gray {
+    background-color: lightgray;
+}
+
+.main {
     box-sizing: border-box;
-    top: 0;
-    height: 100vh;
+    margin: auto;
+    margin-top: 20vh;
+    padding: 0 5%;
 
-    form {
+    @media (max-width: 768px) {
         margin: auto;
-        width: 20vw;
-        height: 20vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        section {
-            display: inline-block;
-            width: 20vw;
-            height: 100%;
-        }
+        margin-top: 10vh;
     }
 
-    .main {
+    h1 {
+        text-align: center;
+        font-size: theme.$big_text;
+    }
+
+    p {
+        text-align: center;
+        font-size: theme.$medium_text;
+        color: theme.$secondary_text;
+    }
+
+    img {
+        display: block;
+        width: 100%;
+        max-width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    button {
         box-sizing: border-box;
         margin: auto;
-        margin-top: 20vh;
-        padding: 0 5%;
-
-        @media (max-width: 768px) {
-            margin: auto;
-            margin-top: 10vh;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: theme.$big_text;
-        }
-    
-        p {
-            text-align: center;
-            font-size: theme.$medium_text;
-            color: theme.$secondary_text;
-        }
-
-        img {
-            display: block;
-            width: 100%;
-            max-width: 500px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        button {
-            box-sizing: border-box;
-            margin: auto;
-            display: block;
-            margin-bottom: 10px;
-        }
+        display: block;
+        margin-bottom: 10px;
     }
-
 }
-
-.p {
-    background-color: theme.$background;
-}
-
-.s {
-    background-color: theme.$secondary_background;
-}
-
 ::-webkit-scrollbar {
     width: 0;
 }
